--- a/.drone.yml
+++ b/.drone.yml
@@ -13,9 +13,11 @@ steps:
     - sleep 5 # give docker enough time to start
     - docker build -t test .
     when:
-      event:
-        - pull_request
-
+      ref:
+        include:
+        - refs/heads/main
+        - refs/pull/**
+  
   - name: docker-tag-build
     image: plugins/docker
     settings:
@@ -43,3 +45,10 @@ services:
 volumes:
 - name: dockersock
   temp: {}
+
+trigger:
+  ref:
+    include:
+    - refs/heads/main
+    - refs/pull/**
+    - refs/tags/**
