--- a/.drone.yml
+++ b/.drone.yml
@@ -30,17 +30,11 @@ steps:
       repo:
         from_secret: docker_repo
       tags:
-        - latest
-        - "${DRONE_TAG}"
+        - linux-arm64
+        - "${DRONE_TAG}-linux-arm64"
     when:
       event:
         - tag
-
-trigger:
-  ref:
-    include:
-    - refs/pull/**
-    - refs/tags/**
 
 ---
 kind: pipeline
@@ -74,8 +68,8 @@ steps:
       repo:
         from_secret: docker_repo
       tags:
-        - latest
-        - "${DRONE_TAG}"
+        - linux-amd64
+        - "${DRONE_TAG}-linux-amd64"
     when:
       event:
         - tag
@@ -84,4 +78,65 @@ trigger:
   ref:
     include:
     - refs/pull/**
+    - refs/tags/**
+
+---
+kind: pipeline
+type: docker
+name: build-all
+
+platform:
+  arch: amd64
+  os: linux
+
+steps:
+  - name: manifest-tag
+    image: plugins/manifest
+    environment:
+      DOCKER_REPO:
+        from_secret: docker_repo
+    settings:
+      auto_tag: "true"
+      ignore_missing: "true"
+      target: "${DOCKER_REPO}:${DRONE_TAG}"
+      template: "${DOCKER_REPO}:${DRONE_TAG}-OS-ARCH"
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+      platforms:
+        - linux/amd64
+        - linux/arm64
+    when:
+      event:
+        - tag
+
+  - name: manifest-latest
+    image: plugins/manifest
+    environment:
+      DOCKER_REPO:
+        from_secret: docker_repo
+    settings:
+      auto_tag: "true"
+      ignore_missing: "true"
+      target: "${DOCKER_REPO}:latest"
+      template: "${DOCKER_REPO}:OS-ARCH"
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+      platforms:
+        - linux/amd64
+        - linux/arm64
+    when:
+      event:
+        - tag
+
+depends_on:
+- linux-amd64
+- linux-arm64
+
+trigger:
+  ref:
+    include:
     - refs/tags/**
